leptos_macro/tests/ui/view/expected_children_got_let_bind_slot_version.stderr
error[E0308]: mismatched types
  --> tests/ui/view/expected_children_got_let_bind_slot_version.rs:17:17
   |
17 |                 <p />
   |                 ^^^^^ expected `Box<dyn FnOnce() -> Fragment>`, found closure
   |
   = note: expected struct `Box<(dyn FnOnce() -> Fragment + 'static)>`
             found closure `{closure@$DIR/tests/ui/view/expected_children_got_let_bind_slot_version.rs:17:17: 17:22}`
